tests/ui/g-typelist-local-missing-step.stderr
error[E0308]: mismatched types
 --> tests/ui/g-typelist-local-missing-step.rs:7:44
  |
7 | const PROGRAM_TOKEN: g::Program<StepNil> = PROGRAM;
  |                                            ^^^^^^^ expected `Program<StepNil>`, found `Program<StepCons<..., ...>>`
  |
  = note: expected struct `Program<StepNil>`
             found struct `Program<StepCons<SendStep<Role<0>, Role<1>, hibana::global::Message<hibana::global::LabelMarker<7>, u16>>, StepNil>>`
